<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"> <!-- لتوسيط كل العناصر عموديًا وأفقيًا -->

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/welcome_student"
        android:textColor="@color/primaryText"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_schedule"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="113dp"
                android:layout_height="53dp"
                app:srcCompat="@drawable/ic_schedulee" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardGrades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_grades"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="108dp"
                android:layout_height="62dp"
                app:srcCompat="@drawable/ic_grade" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAssignments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_assignments"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="105dp"
                android:layout_height="59dp"
                app:srcCompat="@drawable/ic_assignmentt" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
